优化 Class getInstance